discussion/kv_engine/168534/168534_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50266: Add common warmup stats from one function

Rather than add them separately in two.

Change-Id: I37c97d10fe56e921bb27543eda493efb3afb91ba

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-01-11 14:55:02.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-11 15:19:17.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14740/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14: error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
void Warmup::addCommonStats(const StatCollector& collector) const {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.h:241:31: error: unknown type name "StatCollector" [clang-diagnostic-error]
    void addCommonStats(const StatCollector& collector) const;
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14740/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:1914:14:
error: out-of-line definition of "addCommonStats" does not match any declaration in "Warmup" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14740/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36197/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/warmup.h:241:31:
error: unknown type name "StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36197/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13573/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13573/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4442/ : FAILURE

Compile error at [2022-01-11T15:01:20.485Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4442/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16402/ : FAILURE

Compile error at [2022-01-11T15:00:02.779Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16402/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24814/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24814/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16693/ : FAILURE

Compile error at [2022-01-11T15:01:49.647Z] ../kv_engine/engines/ep/src/warmup.h:241:31:
error: ?StatCollector? does not name a type
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16693/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42713/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17487/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4385/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15546/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-01-11 15:29:30.000000000
Message: 
Patch Set 5: Code-Review+1

(1 comment)
Line:1921, engines/ep/src/warmup.cc -> can remove the to_string calls, collector knows how to format a bunch of types ðŸ‘

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-01-11 15:32:37.000000000
MISMATCHED INLINE COMMENT
Line:1921, engines/ep/src/warmup.cc -> Done
----------------------------------------------------------------------------------------------------------------------
